--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/src/images/icon/icon-calendar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://meet.jit.si/external_api.js"></script>
+    <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
+
     <title>ConsultPro</title>
   </head>
   <body>
